--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -13,6 +13,10 @@
     overflow: hidden;
 }
 
+#background-color-wrapper {
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
 #home-headers-container {
     cursor: default;
     width: 100%;
@@ -21,7 +25,6 @@
     grid-area: 'a';
     color: #57CC99;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.6);
 }
 
 #home-page-header {
@@ -74,7 +77,7 @@
 
 #visible-home-lyrics:hover {
     height: 50%;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.7);
     color: #57CC99;
 }
 
