--- a/frontend/src/components/SongPage/SongPage.css
+++ b/frontend/src/components/SongPage/SongPage.css
@@ -1,3 +1,88 @@
-.song-page-container {
+#song-page-container {
     color: #F1D4D4;
+    display: grid;
+    grid-template-areas:
+    'a'
+    'b';
+    justify-content: center;
+
+    animation: song-page-scroll 30s ease-in-out infinite alternate;
+    background-image: url('../../images/background-art.png');
+    border: 0.25vw solid #F1D4D4;
+    height: 90vh;
+    overflow: hidden;
+}
+
+#sp-background-color-wrapper {
+    background-color: rgba(0, 0, 0, 0.6);
+    overflow-x: scroll;
+    width: 100vw;
+    height: 100vh;
+}
+
+#song-page-headers-container {
+    cursor: default;
+    color: #57CC99;
+    width: 100%;
+    text-align: center;
+
+    grid-area: 'a';
+    display: grid;
+    /* grid-template-areas: "a b ."; */
+    grid-template-columns: 1fr 7fr 1fr;
+}
+
+#song-page-header {
+    font-size: 1.5vw;
+    grid-area: 'a';
+}
+
+#song-page-title {
+    font-size: 3.5vw;
+    grid-area: 'b';
+}
+
+#sp-inner-container {
+    height: 80vh;
+    width: 100%;
+    grid-area: 'b';
+    justify-content: left;
+    display: flex;
+}
+
+.song-page-video {
+    margin-bottom: -0.60vh;
+    transition: height 1.5s;
+}
+
+#big-song-page-video {
+    height: 60vh;
+}
+
+#small-song-page-video {
+    height: 40vh;
+}
+
+#song-page-lyrics {
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(241, 212, 212, 0.8);
+    animation: lyrics-unravel 3s ease-out;
+}
+
+#song-page-lyrics:hover {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #57CC99;
+}
+
+@keyframes lyrics-unravel {
+    0% { height: 0%; }
+    100% { height: 100% }
+}
+
+@keyframes song-page-scroll {
+    100% { background-position-y: 100%; }
 }
