--- a/frontend/src/components/SongPage/SongPage.css
+++ b/frontend/src/components/SongPage/SongPage.css
@@ -28,7 +28,6 @@
 
     grid-area: 'a';
     display: grid;
-    /* grid-template-areas: "a b ."; */
     grid-template-columns: 1fr 7fr 1fr;
 }
 
@@ -43,36 +42,38 @@
 }
 
 #sp-inner-container {
-    height: 80vh;
+    height: 100%;
     width: 100%;
+
     grid-area: 'b';
-    justify-content: left;
-    display: flex;
+    display: grid;
+    grid-template-areas: "c a b";
+    grid-template-columns: 1fr 5fr 1fr;
 }
 
-.song-page-video {
-    margin-bottom: -0.60vh;
-    transition: height 1.5s;
-}
-
-#big-song-page-video {
-    height: 60vh;
-}
-
-#small-song-page-video {
-    height: 40vh;
+#sp-comments-container {
+    grid-area: 'c';
 }
 
 #song-page-lyrics {
-    margin: 0;
-    padding: 0;
     cursor: pointer;
-    width: 100%;
+    color: black;
     height: 100%;
-    background-color: rgba(241, 212, 212, 0.8);
+    width: 100%;
+
+    grid-area: 'a';
+    text-align: center;
+    background-color: rgba(87, 204, 153, 0.7);
+    
     animation: lyrics-unravel 3s ease-out;
+    transition: color;
 }
 
+.song-page-video {
+    height: 80%;
+    grid-area: 'b';
+    animation: video-unravel 3s ease-out;
+}
 #song-page-lyrics:hover {
     background-color: rgba(0, 0, 0, 0.7);
     color: #57CC99;
@@ -81,6 +82,11 @@
 @keyframes lyrics-unravel {
     0% { height: 0%; }
     100% { height: 100% }
+}
+
+@keyframes video-unravel {
+    0% { height: 0% }
+    100% { height: 80% }
 }
 
 @keyframes song-page-scroll {
