context menu displaying correctly with clean implementation

--- a/frontend/src/components/MySongsPage/MySongsPage.css
+++ b/frontend/src/components/MySongsPage/MySongsPage.css
@@ -104,11 +104,8 @@
 }
 
 #context-menu {
+    cursor: pointer;
     background-color: red;
-}
-
-#context-menu.visible {
-    display: block;
 }
 
 #context-menu.invisible {
