--- a/frontend/src/components/MySongsPage/MySongsPage.css
+++ b/frontend/src/components/MySongsPage/MySongsPage.css
@@ -60,7 +60,12 @@
     margin: 0 2vw;
 }
 
-#mySongs-lyrics-field {
+.mySongs-card > input {
+    cursor: context-menu;
+}
+
+textarea[data-ms-input='body'] {
+    cursor: context-menu;
     height: 100%;
     width: 100%;
 }
