--- a/frontend/src/components/MySongsPage/MySongsPage.css
+++ b/frontend/src/components/MySongsPage/MySongsPage.css
@@ -52,9 +52,9 @@
 
 .mySongs-card {
     cursor: context-menu;
-    background-color: rgba(241, 212, 212, 0.75);
+    background-color: rgba(192, 96, 161, 0.7);
     overflow-y: auto;
-    transition: height 1.5s 1s;
+    transition: height 1s;
     width: 25vw;
     color: black;
     margin: 0 2vw;
@@ -83,17 +83,17 @@ div[data-subcard-visibility='hidden'] {
 }
 
 div[data-subcard-visibility='visible'] {
-    margin: 0;
-    padding: 0;
     cursor: pointer;
+    background-color: rgba(241, 212, 212, 0.8);
+    overflow-y: auto;
+    transition: height 1s;
     height: 12%;
     width: 25vw;
+    color: black;
     margin: 0 2vw;
-    background-color: rgba(241, 212, 212, 0.8);
-    transition: height 1.5s;
 }
 
-div[data-subcard-visibility='visible-mySongs-info']:hover {
+div[data-subcard-visibility='visible']:hover {
     height: 50%;
     background-color: rgba(0, 0, 0, 0.7);
     color: #57CC99;
