--- a/frontend/src/components/SongPage/SongPage.css
+++ b/frontend/src/components/SongPage/SongPage.css
@@ -10,11 +10,15 @@
     background-image: url('../../images/background-art.png');
     border: 0.25vw solid #F1D4D4;
     height: 90vh;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 @keyframes song-page-scroll {
     100% { background-position-y: 100%; }
+}
+
+#add-comment-form {
+    text-align: center;
 }
 
 #sp-background-color-wrapper {
@@ -45,33 +49,30 @@
 }
 
 #sp-inner-container {
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
 
     grid-area: 'b';
     display: grid;
     grid-template-areas: "c a b";
-    grid-template-columns: 1.5fr 5fr 1fr;
+    grid-template-columns: 2.5fr 5fr 1fr;
 }
 
 #sp-comments-container {
     grid-area: 'c';
-    text-align: left;
-    background-color: blue;
 }
 
 #sp-comments-holder{
-    background-color: rgb(253, 6, 6);
     height: calc(0.6 * 90vh);
     overflow-y: scroll;
+    list-style: none;
+    text-align: left;
 }
 
 #song-page-lyrics {
     cursor: pointer;
     color: black;
     padding: 0;
-    height: 100%;
-    width: 100%;
 
     grid-area: 'a';
     text-align: center;
@@ -87,7 +88,8 @@
 }
 
 .song-page-video {
-    height: 80%;
+    max-width: fit-content;
+    height: 60%;
     grid-area: 'b';
     animation: video-unravel 3s ease-out;
 }
@@ -96,6 +98,7 @@
     0% { height: 0% }
     100% { height: 80% }
 }
+
 #song-page-lyrics:hover {
     background-color: rgba(0, 0, 0, 0.7);
     color: #57CC99;
